Closed Bug 1056259 Opened 10 years ago Closed 10 years ago

Crash in ServiceWorkerRegistration::GetDocumentURI

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch bug.patch (obsolete) — Splinter Review
It turned out that the mWindow is null because the window was already gone away. With this patch the ServiceWorkerRegistration removes itself from the ServiceWorkerManager arrays when its window is destroyed.

Maybe this is the main reason of mochitests failures.
Attachment #8476124 - Flags: review?(nsm.nikhil)
Attached patch bug.patchSplinter Review
description added
Attachment #8476124 - Attachment is obsolete: true
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/9cf1d1bde8ae
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: