Bug 1056259 - ServiceWorkerRegistration should unregister itself when the window is destroyed. r=nsm