dom/workers/ServiceWorkerRegistration.cpp
@@ -8,11 +8,14 @@
 
 #include "mozilla/dom/Promise.h"
 #include "mozilla/dom/ServiceWorkerRegistrationBinding.h"
+#include "mozilla/Services.h"
 #include "nsCycleCollectionParticipant.h"
 #include "nsServiceManagerUtils.h"
 #include "ServiceWorker.h"
 
+#include "nsIObserverService.h"
 #include "nsIServiceWorkerManager.h"
+#include "nsISupportsPrimitives.h"
 #include "nsPIDOMWindow.h"
 
 using namespace mozilla::dom::workers;
@@ -21,6 +24,7 @@ namespace mozilla {
 namespace dom {
 
 NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION_INHERITED(ServiceWorkerRegistration)
+  NS_INTERFACE_MAP_ENTRY(nsIObserver)
 NS_INTERFACE_MAP_END_INHERITING(DOMEventTargetHelper)
 
 NS_IMPL_ADDREF_INHERITED(ServiceWorkerRegistration, DOMEventTargetHelper)
@@ -37,11 +41,21 @@ ServiceWorkerRegistration::ServiceWorkerRegistration(nsPIDOMWindow* aWindow,
                                                      const nsAString& aScope)
   : mWindow(aWindow)
   , mScope(aScope)
+  , mInnerID(0)
+  , mIsListeningForEvents(false)
 {
   MOZ_ASSERT(aWindow);
+  MOZ_ASSERT(aWindow->IsInnerWindow());
 
   SetIsDOMBinding();
   StartListeningForEvents();
+
+  mInnerID = aWindow->WindowID();
+
+  nsCOMPtr<nsIObserverService> obs = services::GetObserverService();
+  if (obs) {
+    obs->AddObserver(this, "inner-window-destroyed", false);
+  }
 }
 
 ServiceWorkerRegistration::~ServiceWorkerRegistration()
@@ -166,17 +180,25 @@ ServiceWorkerRegistration::InvalidateWorkerReference(WhichServiceWorker aWhichOn
 void
 ServiceWorkerRegistration::StartListeningForEvents()
 {
+  MOZ_ASSERT(!mIsListeningForEvents);
+
   nsCOMPtr<nsIServiceWorkerManager> swm = do_GetService(SERVICEWORKERMANAGER_CONTRACTID);
   MOZ_ASSERT(mWindow);
 
   if (swm) {
     swm->AddRegistrationEventListener(GetDocumentURI(), this);
   }
+
+  mIsListeningForEvents = true;
 }
 
 void
 ServiceWorkerRegistration::StopListeningForEvents()
 {
+  if (!mIsListeningForEvents) {
+    return;
+  }
+
   nsCOMPtr<nsIServiceWorkerManager> swm = do_GetService(SERVICEWORKERMANAGER_CONTRACTID);
 
   // StopListeningForEvents is called in the dtor, and it can happen that
@@ -184,6 +206,8 @@ ServiceWorkerRegistration::StopListeningForEvents()
   if (swm && mWindow) {
     swm->RemoveRegistrationEventListener(GetDocumentURI(), this);
   }
+
+  mIsListeningForEvents = false;
 }
 
 nsIURI*
@@ -193,5 +217,37 @@ ServiceWorkerRegistration::GetDocumentURI() const
   return mWindow->GetDocumentURI();
 }
 
+NS_IMETHODIMP
+ServiceWorkerRegistration::Observe(nsISupports* aSubject, const char* aTopic,
+                                   const char16_t* aData)
+{
+  MOZ_ASSERT(NS_IsMainThread());
+
+  if (strcmp(aTopic, "inner-window-destroyed")) {
+    return NS_OK;
+  }
+
+  if (!mIsListeningForEvents) {
+    return NS_OK;
+  }
+
+  nsCOMPtr<nsISupportsPRUint64> wrapper = do_QueryInterface(aSubject);
+  NS_ENSURE_TRUE(wrapper, NS_ERROR_FAILURE);
+
+  uint64_t innerID;
+  nsresult rv = wrapper->GetData(&innerID);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  if (innerID == mInnerID) {
+    nsCOMPtr<nsIObserverService> obs = services::GetObserverService();
+    if (obs) {
+      obs->RemoveObserver(this, "inner-window-destroyed");
+    }
+
+    StopListeningForEvents();
+  }
+
+  return NS_OK;
+}
 } // dom namespace
 } // mozilla namespace
